@@ -4,6 +4,8 @@ Change log for zeit.web
 2.25 (unreleased)
 -----------------
 
+- FIX: Make veeseo video widget appear before advertisement nextread
+
 - ZON-2159: Nestle ranking area closer up to cms code
 
 - HOTFIX: Render a redirect if we have a call to a dynamic folder with an empty
